# MPCC

./: .gitignore  README.md  install.sh
C++/: CMakeLists.txt  README.md  README_NEW.md  Readme.md  config.h  config.hpp  env.sh  install.sh  main.cpp  types.cpp  types.h  types.hpp
C++/Acados/: CMakeLists.txt  Makefile  acados_solver_acados_mpcc.c  acados_solver_sfunction_acados_mpcc.c  main_acados_mpcc.c  main_sim_acados_mpcc.c  make_sfun.m
C++/Acados_mpcc/: CMakeLists.txt  acados_sim_solver_acados_mpcc.c  acados_sim_solver_acados_mpcc.h  acados_solver_acados_mpcc.c  acados_solver_acados_mpcc.h
C++/Acados_mpcc/acados_mpcc_constraints/: acados_mpcc_constr_h_fun.c  acados_mpcc_constr_h_fun_jac_uxt_zt.c  acados_mpcc_constr_h_fun_jac_uxt_zt_hess.c
C++/Acados_mpcc/acados_mpcc_cost/: acados_mpcc_cost.h  acados_mpcc_cost_ext_cost_0_fun_jac.c  acados_mpcc_cost_ext_cost_0_fun_jac_hess.c  acados_mpcc_cost_ext_cost_e_fun_jac.c  acados_mpcc_cost_ext_cost_e_fun_jac_hess.c  acados_mpcc_cost_ext_cost_fun_jac.c  acados_mpcc_cost_ext_cost_fun_jac_hess.c
C++/Acados_mpcc/acados_mpcc_model/: acados_mpcc_expl_ode_fun.c  acados_mpcc_expl_ode_hess.c  acados_mpcc_expl_vde_forw.c  acados_mpcc_model.h
C++/Constraints/: bounds.cpp
C++/Cost/: cost.cpp
C++/Interfaces/: acados_interface.cpp  acados_interface.h  acados_interface.hpp  acados_sim_interface.cpp  acados_sim_interface.h  solver_interface.cpp  solver_interface.h
C++/MPC/: mpc.cpp  mpc.h  mpc.hpp
C++/Model/: integrator.cpp  integrator.h  integrator_old.h
C++/Models/: models.cpp  models.hpp
C++/Params/: bounds.json  config.json  cost.json  model.json  params.cpp  params.h  params.hpp  track.hpp
C++/Params/tracks/: FSG_matlab.json
C++/Plotting/: plotting.cpp  plotting.h  plotting.hpp
C++/Simulator/: simulator.cpp  simulator.hpp
C++/Spline/: arc_length_spline.cpp  arc_length_spline.h  cubic_spline.cpp  cubic_spline.h
C++/data/params/: bounds.json  car.json  config.json  costs.json  model.json  tire.json
C++/src/: config.hpp  main.cpp  types.cpp  types.hpp
C++/src/Acados_mpcc/: acados_solver_acados_mpcc.h
C++/src/Acados_mpcc/acados_mpcc_constraints/: acados_mpcc_constr_h_fun.c  acados_mpcc_constr_h_fun_jac_uxt_zt.c
C++/src/Acados_mpcc/acados_mpcc_cost/: acados_mpcc_cost_ext_cost_0_fun.c  acados_mpcc_cost_ext_cost_0_fun_jac_hess.c  acados_mpcc_cost_ext_cost_e_fun.c  acados_mpcc_cost_ext_cost_fun.c  acados_mpcc_cost_ext_cost_fun_jac.c  acados_mpcc_cost_ext_cost_fun_jac_hess.c
C++/src/Acados_mpcc/acados_mpcc_model/: acados_mpcc_expl_ode_fun.c  acados_mpcc_expl_vde_adj.c  acados_mpcc_expl_vde_forw.c
C++/src/Interfaces/: acados_interface.cpp  acados_interface.hpp  solver_interface.hpp
C++/src/MPC/: mpc.cpp  mpc.hpp
C++/src/Models/: models.cpp  models.hpp
C++/src/Params/: params.cpp  params.hpp
C++/src/Plotting/: plotting.cpp  plotting.hpp
C++/src/Simulator/: simulator.cpp  simulator.hpp
C++/src/Spline/: arc_length_spline.cpp  arc_length_spline.hpp  cubic_spline.hpp
C++/src/Track/: track.cpp
C++/src/acados_mpcc/: CMakeLists.txt  acados_solver_acados_mpcc.c  acados_solver_acados_mpcc.h
C++/src/acados_mpcc/acados_mpcc_constraints/: acados_mpcc_constr_h_fun.c  acados_mpcc_constr_h_fun_jac_uxt_zt.c  acados_mpcc_constraints.h
C++/src/acados_mpcc/acados_mpcc_cost/: acados_mpcc_cost_ext_cost_0_fun.c  acados_mpcc_cost_ext_cost_0_fun_jac.c  acados_mpcc_cost_ext_cost_0_fun_jac_hess.c  acados_mpcc_cost_ext_cost_e_fun.c  acados_mpcc_cost_ext_cost_e_fun_jac.c  acados_mpcc_cost_ext_cost_e_fun_jac_hess.c  acados_mpcc_cost_ext_cost_fun.c  acados_mpcc_cost_ext_cost_fun_jac.c  acados_mpcc_cost_ext_cost_fun_jac_hess.c
C++/src/acados_mpcc/acados_mpcc_model/: acados_mpcc_expl_ode_fun.c  acados_mpcc_expl_vde_adj.c  acados_mpcc_expl_vde_forw.c
Matlab/: TROgenerate.m  acados_ocp_nlp.json  config.m  configTRO.m  plot_data.m  simulation.m
Matlab/acados/: Acados.m  AcadosTRO.m  getModel.m  getModelTRO.m
Matlab/ipopt/: Ipopt.m
Matlab/model/: Model.m
Matlab/parameters/: Parameters.m  bounds.json  boundsTRO.json  car.asv  car.json  config.json  cost.json  model.json  tire.json
Matlab/plot/@Plot/: Plot.m  constrAndSlacks.m  costsAndSlacks.m  (+4 more)
Matlab/simulator/: Simulator.m
Matlab/spline/: ArcLengthSpline.m
Matlab/types/: StateTRO.m  vectorToStateTRO.m
